# seasons-cal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  tests.py
.github/workflows/: index.html  pages.yml  pre-commit.yml  release.yml  test-build.yml  tests.yml
seasons_cal/: __init__.py  __main__.py
