[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "seasons-cal"
requires-python = ">=3.8"
dependencies = ["ephem"]
authors = [{name = "Zeev Rotshtein", email = "zeevro@gmail.com"}]
readme = "README.md"
keywords = ["calendar", "icalendar", "ical", "ics", "seasons", "equinox", "solstice"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/zeevro/seasons-cal/"

[project.scripts]
seasons-cal = "seasons_cal.__main__:main"

[tool.hatch.version]
source = "vcs"
